<resources>
    <string name="app_name">carpify</string>
    <string name="map">Mapa</string>
    <string name="my_fish">Moje połowy</string>
    <string name="settings">Ustawienia</string>
    <string name="profile">Profil</string>
    <string name="list">Lista</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datetime">Data złowienia</string>
    <string name="bait">Przynęta</string>
    <string name="desc">Szczegóły</string>
    <string name="size">Długość</string>
    <string name="weight">Waga</string>
    <string name="species">Gatunek</string>

    <string name="login">Zaloguj</string>
    <string name="register">Zarejestruj</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="password">Hasło</string>

    <string name="all_fish">Wszystkie</string>
    <string name="common">Pełnołuski</string>
    <string name="mirror">Królewski</string>
    <string name="grasscarp">Amur</string>
    <string name="sturgeon">Jesiotr</string>
    <string name="catfish">Sum</string>
    <string name="other">Inne</string>

    <string name="date_from">Data od:</string>
    <string name="date_to">data do:</string>
    <string name="weight_from">Waga od:</string>
    <string name="weight_to">Waga do:</string>
    <string name="length_from">Długość od:</string>
    <string name="length_to">Długość do:</string>

    <string name="kg">kg</string>
    <string name="cm">cm</string>

    <string name="apply">Zastosuj</string>
    <string name="cancel">Anuluj</string>
    <string name="reset">Resetuj</string>
    <string name="select_coords">Wybierz pozycję</string>
    <string name="confirm">Potwierdź</string>
    <string name="length">Długość</string>
    <string name="date">Data</string>
    <string name="time">Godzina</string>
    <string name="image_info">fish image</string>



</resources>