<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.LoginActivity">

    <Button
        android:id="@+id/login_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/register_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edittext" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edittext"/>

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPersonName"
        android:layout_marginTop="200dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_edittext"/>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zapamiętaj"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="419dp" />

</androidx.constraintlayout.widget.ConstraintLayout>