<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fish"
            type="pl.mclojek.carpify.domain.model.Fish" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.fragment.FishDetailsFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/carp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout style="@style/ContainerStyle">

            <TextView
                style="@style/StaticTextViewStyle"
                android:text="@string/species" />

            <TextView
                android:id="@+id/text_view_species"
                style="@style/DynamicTextViewStyle"
                android:text="@{fish.species}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/ContainerStyle"
                android:layout_width="match_parent"
                android:layout_weight="1">

                <TextView
                    style="@style/StaticTextViewStyle"
                    android:text="@string/weight" />

                <TextView
                    android:id="@+id/text_view_weight"
                    style="@style/DynamicTextViewStyle"
                    android:text="@{fish.weight + `kg`}" />
            </LinearLayout>

            <LinearLayout
                style="@style/ContainerStyle"
                android:layout_width="match_parent"
                android:layout_weight="1">

                <TextView
                    style="@style/StaticTextViewStyle"
                    android:text="@string/size" />

                <TextView
                    android:id="@+id/text_view_size"
                    style="@style/DynamicTextViewStyle"
                    android:text="@{fish.size + `cm`}" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/ContainerStyle">

            <TextView
                style="@style/StaticTextViewStyle"
                android:text="@string/datetime" />

            <TextView
                android:id="@+id/text_view_datetime"
                style="@style/DynamicTextViewStyle"
                android:text="@{fish.getDateString()}" />
        </LinearLayout>

        <LinearLayout style="@style/ContainerStyle">

            <TextView
                style="@style/StaticTextViewStyle"
                android:text="@string/bait" />

            <TextView
                android:id="@+id/text_view_bait"
                style="@style/DynamicTextViewStyle"
                android:text="@{fish.bait}" />
        </LinearLayout>

        <LinearLayout style="@style/ContainerStyle">

            <TextView
                style="@style/StaticTextViewStyle"
                android:text="@string/desc" />

            <TextView
                android:id="@+id/text_view_desc"
                style="@style/DynamicTextViewStyle"
                android:text="@{fish.desc}" />
        </LinearLayout>

    </LinearLayout>
</layout>